tested the class